...
  //     email: event.email,
  //     image: state.imageName,
  //   ));
  //   result.fold((l) => emit(state.copyWith(isLoading: false, isSuccess: false)),
  //       (r) {
  //     emit(state.copyWith(isLoading: false, isSuccess: true));
  //     showMySnackBar(context: event.context, message: "Signup successful");
  //   });
  // }

  void _onRegisterEvent(
    RegisterUser event,
    Emitter<RegisterState> emit,
...
